# ai-pr-review-assistant

./: .gitignore  .vercelignore  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json  vercel.json
app/api/pr/analyze/: route.ts
docs/: README.md  architecture.md  data-mapping.md  future-roadmap.md  model-strategy.md  pr-2-real-ai-test-report.md  pr-2-review-report.html  pr-2-structured-ai-analysis.md  pr-3-review-report.html  product-boundary.md  prompt-design.md
examples/: sample_diff.patch  sample_pr_report.md
extension/: README.md  background.js  content.js  manifest.json  popup.css  popup.html  popup.js  report-viewer.html  report-viewer.js
lib/: ai-context-builder.ts  ai-review.ts  github.ts  mock-analysis.ts  parser.ts  report-html.ts  response.ts  rule-checker.ts
prompts/: ai-review-system.md  ai-review-user.md  report-display-system.md  report-display-user.md  report-html-system.md  report-html-user.md  review_suggestions.md  review_summary.md  risk_analysis.md
src/ai_pr_review/: __init__.py  cli.py  context_builder.py  diff_parser.py  github_client.py  report.py  review_generator.py  risk_analyzer.py
tests/: ai-context-builder.test.ts  ai-review.test.ts  extension-static.test.ts  github-fetch.test.ts  mock-analysis.test.ts  pr-analyze-route.test.ts  pr-fetch-route.test.ts  pr-parse-route.test.ts  pr-report-html-route.test.ts  pr-url-parser.test.ts  report-html.test.ts  rule-checker.test.ts  test_diff_parser.py  test_risk_analyzer.py
types/: ai-context.ts  analysis.ts  api.ts  github.ts  report.ts
(+3 files in other folders)
